# Project_2024

./: Comparisons.ipynb  Group_Report.md  README.md  Report.md  Report_tmp.html  p32-a4194304.cali
BitonicSort/: bitonic.cpp  mpi.grace_job  p4-a65536.cali
MPI_Builds/: mpi.grace_job
Mergesort/: CMakeLists.txt  MergeSortPlots.ipynb  mergesort.cpp  mpi.grace_job  p32-a65536.cali
SampleSort/: CMakeLists.txt  SampleSort.ipynb  build.sh  mpi.grace_job  p32-a1048576.cali  p32-a268435456.cali  p32-a65536.cali  samplesort.cpp
radix_sort/: RadixSort_Notebook.ipynb  build.sh  lab2-analysis_single_trial-Copy2-4.ipynb  mpi.grace_job  output.11699907  radixsort.cpp  submit_all_combinations.sh
radix_sort/old_submissions/: p32-a1024.cali
